# connectedhomeip

.github/workflows/: tests.yaml
examples/air-purifier-app/air-purifier-common/: air-purifier-app.matter
examples/air-quality-sensor-app/air-quality-sensor-common/: air-quality-sensor-app.matter
examples/air-quality-sensor-app/silabs/efr32/: BUILD.gn  openthread.gni
examples/air-quality-sensor-app/silabs/efr32/data_model/: BUILD.gn  air-quality-sensor-app.matter  air-quality-sensor-app.zap
examples/all-clusters-app/all-clusters-common/: all-clusters-app.matter
examples/all-clusters-minimal-app/all-clusters-common/: all-clusters-minimal-app.matter
examples/bridge-app/bridge-common/: bridge-app.matter
examples/camera-app/camera-common/: camera-app.matter
examples/chef/devices/: icd_rootnode_contactsensor_ed3b19ec55.matter  noip_rootnode_dimmablelight_bCwGYSDpoe.matter  rootnode_airpurifier_73a6fe2651.matter  rootnode_airpurifier_airqualitysensor_temperaturesensor_humiditysensor_thermostat_56de3d5f45.matter  rootnode_airqualitysensor_e63187f6c9.matter  rootnode_basicvideoplayer_0ff86e943b.matter  rootnode_colortemperaturelight_hbUnzYVeyn.matter  rootnode_contactsensor_27f76aeaf5.matter  rootnode_contactsensor_lFAGG1bfRO.matter  rootnode_contactsensor_lightsensor_occupancysensor_temperaturesensor_pressuresensor_flowsensor_humiditysensor_airqualitysensor_powersource_367e7cea91.matter  rootnode_dimmablelight_bCwGYSDpoe.matter  rootnode_dimmablepluginunit_f8a9a0b9d4.matter  rootnode_dishwasher_cc105034fe.matter  rootnode_doorlock_aNKYAreMXE.matter  rootnode_extendedcolorlight_8lcaaYJVAa.matter  rootnode_fan_7N2TobIlOX.matter  rootnode_flowsensor_1zVxHedlaV.matter  rootnode_genericswitch_2dfff6e516.matter  rootnode_genericswitch_9866e35d0b.matter  rootnode_heatingcoolingunit_ncdGai1E5a.matter  rootnode_heatpump_87ivjRAECh.matter  rootnode_humiditysensor_Xyj4gda6Hb.matter  rootnode_laundrydryer_01796fe396.matter  rootnode_laundrywasher_fb10d238c8.matter  rootnode_lightsensor_lZQycTFcJK.matter  rootnode_occupancysensor_iHyVgifZuo.matter  rootnode_onofflight_bbs1b7IaOV.matter  rootnode_onofflight_samplemei.matter  rootnode_onofflightswitch_FsPlMr090Q.matter  rootnode_onoffpluginunit_Wtf8ss5EBY.matter  rootnode_pressuresensor_s0qC9wLH4k.matter  rootnode_pump_5f904818cc.matter  rootnode_pump_a811bb33a0.matter  rootnode_rainsensor_a7aa5d7738.matter  rootnode_refrigerator_temperaturecontrolledcabinet_temperaturecontrolledcabinet_ffdb696680.matter  rootnode_roboticvacuumcleaner_1807ff0c49.matter  rootnode_roomairconditioner_9cf3607804.matter  rootnode_smokecoalarm_686fe0dcb8.matter  rootnode_speaker_RpzeXdimqA.matter  rootnode_temperaturesensor_Qy1zkNW7c3.matter  (+5 more)
examples/closure-app/closure-common/: closure-app.matter
examples/contact-sensor-app/contact-sensor-common/: contact-sensor-app.matter
examples/dishwasher-app/dishwasher-common/: dishwasher-app.matter
examples/energy-management-app/energy-management-common/: energy-management-app.matter
examples/fabric-bridge-app/fabric-bridge-common/: fabric-bridge-app.matter
examples/flow-sensor-app/cc13x2x7_26x2x7/: BUILD.gn  args.gni
examples/flow-sensor-app/cc2674r10/: BUILD.gn  args.gni
examples/flow-sensor-app/flow-sensor-common/: BUILD.gn  flow-sensor-app.matter  flow-sensor-app.zap
examples/light-switch-app/light-switch-common/: icd-lit-light-switch-app.matter  light-switch-app.matter
examples/lighting-app-data-mode-no-unique-id/lighting-common/: lighting-app.matter
examples/lighting-app/cc2674r10/: BUILD.gn  chip_cc2674r10.syscfg
examples/lighting-app/lighting-common/: lighting-app.matter
examples/lit-icd-app/lit-icd-common/: lit-icd-server-app.matter
examples/lock-app/lock-common/: lock-app.matter
examples/microwave-oven-app/microwave-oven-common/: microwave-oven-app.matter
examples/network-manager-app/network-manager-common/: network-manager-app.matter
examples/occupancy-sensor-app/cc13x2x7_26x2x7/: BUILD.gn  args.gni
examples/occupancy-sensor-app/cc2674r10/: BUILD.gn  args.gni
examples/occupancy-sensor-app/occupancy-sensor-common/: BUILD.gn  occupancy-sensor-app.matter  occupancy-sensor-app.zap
examples/ota-provider-app/ota-provider-common/: ota-provider-app.matter
examples/ota-requestor-app/ota-requestor-common/: ota-requestor-app.matter
examples/pump-app/pump-common/: pump-app.matter
examples/pump-controller-app/pump-controller-common/: pump-controller-app.matter
examples/refrigerator-app/refrigerator-common/: refrigerator-app.matter
examples/room-sensor-app/room-sensor-common/: BUILD.gn  room-sensor-app.matter  room-sensor-app.zap
examples/room-sensor-app/silabs/efr32/: BUILD.gn  args.gni  openthread.gni
examples/room-sensor-app/silabs/efr32/data_model/: BUILD.gn  room-sensor-app.matter
examples/room-sensor-app/silabs/efr32/include/: AppConfig.h  AppTask.h  SensorManager.h  sl_board_control_config.h
examples/room-sensor-app/silabs/efr32/include/brd2601b/: sl_board_control_config.h
examples/room-sensor-app/silabs/efr32/include/brd4166a/: sl_board_control_config.h
examples/room-sensor-app/silabs/efr32/src/: AppTask.cpp  SensorManager.cpp  ZclCallbacks.cpp  main.cpp
examples/rvc-app/rvc-common/: rvc-app.matter
examples/smoke-co-alarm-app/smoke-co-alarm-common/: smoke-co-alarm-app.matter
examples/temperature-measurement-app/temperature-measurement-common/: temperature-measurement.matter
examples/terms-and-conditions-app/terms-and-conditions-common/: terms-and-conditions-app.matter
examples/thermostat/thermostat-common/: thermostat.matter
examples/thread-br-app/thread-br-common/: thread-br-app.matter
examples/tv-app/tv-common/: tv-app.matter
examples/tv-casting-app/tv-casting-common/: tv-casting-app.matter
examples/virtual-device-app/virtual-device-common/: virtual-device-app.matter
examples/water-leak-detector-app/cc2674r10/: BUILD.gn  args.gni
src/python_testing/: DescriptorVerification.py  PICSGenerator.py  PICSParser.py  StressTesting.py  TC_DeviceTypeValidation.py  TC_DeviceTypeValidation_Readme.txt  TC_DeviceValidation.py  TC_LVL_3_1.py
(+118 files in other folders)
